New logo IF BAIANO

--- a/soilprofile/assets/report/report_template.html
+++ b/soilprofile/assets/report/report_template.html
@@ -12,7 +12,7 @@
             <h1>
                 Soil profile report
             </h1>
-            <img class="logo" src="../../assets/report/if_logo.png">
+            <img class="logo" src="../../assets/report/if_logo_white.png">
         </div>
         <div id="body">
             <h2>
