--- a/soilprofile/assets/report/report_template.html
+++ b/soilprofile/assets/report/report_template.html
@@ -15,9 +15,11 @@
             <img class="logo" src="../../assets/report/if_logo_white.png">
         </div>
         <div id="body">
+	    
             <h2>
                 Dataset Preview
             </h2> 
+	    ###WARNING###
             <div class="tableContainer">       
             ###DATASET PREVIEW###
             </div>
