Improvements on the html report

--- a/soilprofile/assets/report/report_template.html
+++ b/soilprofile/assets/report/report_template.html
@@ -8,11 +8,15 @@
 <body>
     <div id="mainContainer">
         <div id="header">
-            <img class="logo" src="../../assets/report/logo.png">
-            <h1>
+	    <div class="logoContainer containerProjeto">
+                <img class="logo" src="../../assets/report/logo.png"></img>
+            </div>
+            <h1 id="title">
                 Soil profile report
             </h1>
-            <img class="logo" src="../../assets/report/if_logo_white.png">
+            <div class="logoContainer containerIF">
+                <img class="logo" src="../../assets/report/if_logo_white.png"></img>
+            </div> 
         </div>
         <div id="body">
 	    
@@ -36,12 +40,17 @@
             <div class="tableContainer">       
             ###RESULTS###
             </div>
+            <div class="tableContainer">       
+            ###WINNERS_COUNT###
+            </div>
         </div>
         <div id="footer">
             <footer>
-                <p>Originally developed by: Sâmela Camelo<br>
-                    <a href="https://ifbaiano.edu.br/">Instituto Federal Baiano</a>
+                <p>Originally developed by: Sâmela Camelo                   
                 </p>
+		<p>
+		<a href="https://ifbaiano.edu.br/">Instituto Federal Baiano</a>
+		</p>
             </footer>
         </div>
     </div>
