Removed the winner method section

--- a/soilprofile/assets/report/report_template.html
+++ b/soilprofile/assets/report/report_template.html
@@ -41,7 +41,7 @@
             ###RESULTS###
             </div>
             <div class="tableContainer">       
-            ###WINNERS_COUNT###
+            ###METHODS_ANALYSIS###
             </div>
         </div>
         <div id="footer">
